# atmos

atmos_mixer_pro/: .flutter-plugins-dependencies 2  .flutter-plugins-dependencies 3  README.md  config.json  dummy.rs  loop.md  pubspec.yaml  stress_test.dart
atmos_mixer_pro/docs/backup/: preferences_modal_backup.dart
atmos_mixer_pro/integration_test/: simple_test.dart  stress_test.py
atmos_mixer_pro/lib/: main.dart
atmos_mixer_pro/macos/: Podfile
atmos_mixer_pro/macos/Runner/: DebugProfile.entitlements  Release.entitlements  remove_detritus.sh
atmos_mixer_pro/macos/Runner.xcodeproj/: project.pbxproj
atmos_mixer_pro/rust/: Cargo.toml  build.rs
atmos_mixer_pro/rust/src/: frb_generated.rs  lib.rs  test_race.rs
atmos_mixer_pro/rust/src/api/: error.rs  mod.rs  simple.rs
atmos_mixer_pro/rust/src/audio/: channel_names.rs  engine.rs  mixer.rs  mod.rs  player.rs  resampler.rs  streaming.rs
atmos_mixer_pro/rust/src/common/: commands.rs  config.rs  mod.rs  utils.rs
atmos_mixer_pro/rust/src/core/: state.rs
atmos_mixer_pro/rust/src/osc/: debouncer.rs  listener.rs  mod.rs
atmos_mixer_pro/rust/tests/: stress_test.rs
atmos_mixer_pro/rust_builder/: pubspec.yaml
atmos_mixer_pro/rust_builder/android/: build.gradle  settings.gradle
atmos_mixer_pro/rust_builder/ios/: rust_lib_atmos_mixer_pro.podspec
atmos_mixer_pro/rust_builder/linux/: CMakeLists.txt
atmos_mixer_pro/rust_builder/macos/: rust_lib_atmos_mixer_pro.podspec
atmos_mixer_pro/test/: widget_test.dart
atmos_mixer_pro/windows/: CMakeLists.txt
docs/: Atmos_Mixer_Pro_UXUI_and_Features_Specs.md
docs/Harness/: Flutter_Rust_Harness_Rules.md
docs/Merge report/: loop.md
docs/init/: Walkthrough.md  implementation_plan.md  project_7_pillars_specs.md
docs/report/: backend_mp3_debug_report.md  bug_analysis_rules_phase1.md  bug_analysis_rules_phase2.md  macOS_build_troubleshooting_report.md  macOS_build_verification_report.md  testing_rules_log.md
dummy/atmos-python/: config.json  main.py  main_ui.py  공포테마_세팅.json  기본세팅.json
(+26 files in other folders)
