[package]
name = "rust_lib_atmos_mixer_pro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
cpal = "0.15.3"
symphonia = { version = "0.5.4", features = ["all"] }
crossbeam-channel = "0.5.13"
rosc = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
