[package]
name = "rust_lib_atmos_mixer_pro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
cpal = "0.15.2"
crossbeam-channel = "0.5.15"
flutter_rust_bridge = "=2.12.0"
lazy_static = "1.5.0"
once_cell = "1.21.4"
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
symphonia = { version = "0.5.3", features = ["all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
