[package]
name = "rust_lib_atmos_mixer_pro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.102"
cpal = "0.15.2"
crossbeam-channel = "0.5.15"
flutter_rust_bridge = "=2.12.0"
lazy_static = "1.5.0"
once_cell = "1.21.4"
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
symphonia = { version = "0.5.3", features = ["all"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8.6"
coreaudio-sys = "0.2.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem"
] }
